fix: fix UI overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -41,7 +41,7 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 400px calc(100vw - 12rem - 400px);
+    grid-template-columns: 400px 1fr;
     padding: 4rem 2rem;
   }
 }
